added some more functionality

--- a/frontend/resume-builder/src/index.css
+++ b/frontend/resume-builder/src/index.css
@@ -67,3 +67,21 @@
 .form-input {
   @apply w-full text-sm text-black outline-none bg-white border border-slate-100 px-2.5 py-3 rounded-md mt-2 placeholder:text-gray-500 focus-within:border-purple-300;
 }
+
+.spinner {
+  border: 2px solid #f3f3f3;
+  border-top: 2px solid #9328e7;
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
